--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,28 +1,19 @@
 {
-  "manifest_version": 2,
-  "version": "0.0.1",
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "description": "Sample application showing how to create an extension with Create React App",
-  "browser_action": {
-    "default_title": "CRE",
-    "default_popup": "popup.html"
-  },
-  "background": {
-    "scripts": ["background.bundle.js"]
-  },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["contentScript.bundle.js"]
-    }
-  ],
-  "icons": {
-    "16": "img/icon-16.png",
-    "48": "img/icon-48.png",
-    "128": "img/icon-128.png"
-  },
-  "options_page": "options.html",
-  "permissions": ["activeTab"],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+	"manifest_version": 2,
+	"version": "0.0.1",
+	"short_name": "Bnb Buyer Admin",
+	"name": "Bnb Buyer Admin",
+	"description": "Manage bnb buyer extension users",
+	"browser_action": {
+		"default_title": "Bnb Buyer Admin"
+	},
+	"background": {
+		"scripts": ["background.bundle.js"]
+	},
+	"icons": {
+		"192": "home.png"
+	},
+	"options_ui": { "open_in_tab": true, "page": "options.html" },
+	"permissions": ["activeTab"],
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
